add some game collaborators